Added half life, new tag buttons, fixed typo on tagline song

--- a/pages/audience_participation.html
+++ b/pages/audience_participation.html
@@ -58,7 +58,7 @@
 			<li>Instruct the audience memebers to just blurt out a random word, don't try to make it fit in the context of the scene.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="audience_participation.html">Audience Participation</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
