--- a/pages/child_friendly.html
+++ b/pages/child_friendly.html
@@ -60,7 +60,7 @@
 			<li>This is a fun easy way to warm up. Great for children or beginners.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -88,7 +88,7 @@
 			<li>Good for building up energy.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -120,7 +120,7 @@
 			<li>As the host, utilize the rule of three most of the time, only occasionally making the improvisers change only one line of dialogue or making them change many lines in a long run of changes.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="torture.html">Torture</a> - 
+		<a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="torture.html">Torture</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -141,7 +141,7 @@
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Improvisers are able to make up a character and explore their perspective without worrying about other elements of scenework.</li>
+			<li>Improvisers are able to make up a character and explore their perspective without worrying about other elements of scene work.</li>
 			<li>Improviers will have to listen to their scene partners and make decisions that are distinct from them.</li>
 		</ul><hr>
 		<h3>Tips</h3>
@@ -153,7 +153,7 @@
 			<li>Let a different character answer first in each round of questions.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="performance.html">Performance</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -194,7 +194,7 @@
 			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="guessing.html">Guessing</a> - <a class="tag-link" href="performance.html">Performance</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
