--- a/pages/justification.html
+++ b/pages/justification.html
@@ -58,7 +58,7 @@
 			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="scene.html">Scenework</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="justification.html">Justification</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -119,7 +119,7 @@
 			<li>These are just couple variations we play, there are infinite possibilities so make up and experiment with your own.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="sentences.html">Sentences</a> - 
+		<a class="tag-link" href="justification.html">Justification</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="sentences.html">Sentences</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
