--- a/pages/object_work.html
+++ b/pages/object_work.html
@@ -22,6 +22,9 @@
 				<a href="#chainMurder">Chain Murder</a>
 			</li>
 			<li>
+				<a href="#halfLife">Half Life</a>
+			</li>
+			<li>
 				<a href="#talkAboutSomethingElse">Talk About Something Else</a>
 			</li>
 		</ul>
@@ -60,7 +63,34 @@
 			<li>Sources text</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="gibberish.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
+		<a class="tag-link" href="gibberish.html">Gibberish</a> - <a class="tag-link" href="guessing.html">Guessing</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="performance.html">Performance</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- HALF LIFE ---------- -->
+	<div class="game-box p-2" id="halfLife">
+		<h2>Half Life</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>The host sets up the game. Two improvisers will perform an entire story in just one minute. They can riff a little about how movies today are too long, people don't have long attention spans or whatever.</li>
+			<li>The host then gets a suggestion. It could be an existing story or movie title, a made up title, a genre, or any basic suggestion.</li>
+			<li>The two improviers then perform that scene, trying to create the entire story in one minute. The host will time them and call scene at one minute.</li>
+			<li>Then the host will point out that it's still too long and set them up to do the same scene in half the time.</li>
+			<li>This pattern continues doing the same scene in half the time going from 60 to 30 to 15 to 7 to 3 to 1 second(s).</li>
+			<li>Each time the scene is replayed it's distilled and/or sped up further until the final one second scene.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Try to move around the stage and use object work to help you remember the flow of what happens in the original scene.</li>
+			<li>It probably won't be an extremely compelling narrative but try to have a beginning, middle, and end.</li>
+			<li>Play up dramatic and film tropes.</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="torture.html">Torture</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -89,7 +119,7 @@
 			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 36</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="object_work.html">Object Work</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
