--- a/pages/song_formats.html
+++ b/pages/song_formats.html
@@ -33,7 +33,7 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>A simple tagline is descovered through a scene or suggestion.</li>
+			<li>A simple tagline is discovered through a scene or suggestion.</li>
 			<li>Then the music will come in and the improvisers will sing a song with four parts.</li>
 			<li>In a front facing tagline song each verse starts with the Tagline.</li>
 			<li>In a back facing tagline song each verse ends with the tagline, so you know before you start what rhyme you need to set up.</li>
@@ -57,7 +57,7 @@
 			<li><a href="https://www.openyourmouthandsing.co.uk/tagline-song.html">openyourmouthandsing.co.uk</a></li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="musical.html">Musical</a> - <a href="song_formats.html">Song Format</a> - 
+		<a class="tag-link" href="musical.html">Musical</a> - <a class="tag-link" href="song_formats.html">Song Format</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
