--- a/pages/warm_ups.html
+++ b/pages/warm_ups.html
@@ -69,7 +69,7 @@
 			<li>This is a fun easy way to warm up. Great for children or beginners.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -122,7 +122,7 @@
 			<li>Synonyms are usually the way to ge, but a curveball can be fun too.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="musical.html">Musical</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -164,7 +164,7 @@
 			<li>Players of this game need to be in the moment and listening, ready to react and respond when called up.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -192,7 +192,7 @@
 			<li>Good for building up energy.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -238,7 +238,7 @@
 			<li>How to be the Greatest Improviser on Earth by Will Hines - p. 41</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -273,7 +273,7 @@
 			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="scene.html">Scenework</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="justification.html">Justification</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -328,7 +328,7 @@
 			<li>You playing in pairs or a larger group.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -357,7 +357,7 @@
 			<li>Try to add variety to your scenes by varying them in length, number of performers per scene and energy level.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performace</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="long_forms.html">Long Form</a> - <a class="tag-link" href="performance.html">Performace</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
