--- a/pages/all_games.html
+++ b/pages/all_games.html
@@ -70,6 +70,9 @@
     </div>
     <h3 id="h">H</h3>
     <div>
+      <ul>
+<li><h5><a href="performance.html#halfLife">Half Life</a></h5></li>
+      </ul>
     </div>
     <h3 id="i">I</h3>
     <div>
