--- a/pages/character.html
+++ b/pages/character.html
@@ -57,7 +57,7 @@
 			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 178</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="scene.html">Scene</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="scene.html">Scene</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -78,7 +78,7 @@
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Improvisers are able to make up a character and explore their perspective without worrying about other elements of scenework.</li>
+			<li>Improvisers are able to make up a character and explore their perspective without worrying about other elements of scene work.</li>
 			<li>Improviers will have to listen to their scene partners and make decisions that are distinct from them.</li>
 		</ul><hr>
 		<h3>Tips</h3>
@@ -90,7 +90,7 @@
 			<li>Let a different character answer first in each round of questions.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="performance.html">Performance</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -136,7 +136,7 @@
 			<li>How to be the Greatest Improviser on Earth by Will Hines - p. 41</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="exercises.html">Exercise</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -182,7 +182,7 @@
 			<li>It's also okay to address multiple improvisers at once or to call someone in the group out(within the game).</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="pun.html">Pun</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -223,7 +223,7 @@
 			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="guessing.html">Guessing</a> - <a class="tag-link" href="performance.html">Performance</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
