--- a/pages/gibberish.html
+++ b/pages/gibberish.html
@@ -57,7 +57,7 @@
 			<li>Sources text</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="gibberish.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
+		<a class="tag-link" href="gibberish.html">Gibberish</a> - <a class="tag-link" href="guessing.html">Guessing</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="performance.html">Performance</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
