--- a/pages/listening.html
+++ b/pages/listening.html
@@ -37,6 +37,9 @@
 				<a href="#dayInTheLife">Day in the Life</a>
 			</li>
 			<li>
+				<a href="#halfLife">Half Life</a>
+			</li>
+			<li>
 				<a href="#justificationRealtor">Justification Realtor</a>
 			</li>
 			<li>
@@ -94,7 +97,7 @@
 			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 302</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="group.html">Group Game</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -133,7 +136,7 @@
 			<li>You could play it as an elimination game where people get out if they mess up or take too long to respond.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -186,7 +189,7 @@
 			<li>Synonyms are usually the way to ge, but a curveball can be fun too.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="musical.html">Musical</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -228,7 +231,7 @@
 			<li>Players of this game need to be in the moment and listening, ready to react and respond when called up.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -256,7 +259,7 @@
 			<li>Good for building up energy.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="energy.html">Energy</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -292,7 +295,34 @@
 			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercises</a> - <a href="interview.html">Interview</a> - <a href="listening.html">Listening</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercises</a> - <a class="tag-link" href="interview.html">Interview</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- HALF LIFE ---------- -->
+	<div class="game-box p-2" id="halfLife">
+		<h2>Half Life</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>The host sets up the game. Two improvisers will perform an entire story in just one minute. They can riff a little about how movies today are too long, people don't have long attention spans or whatever.</li>
+			<li>The host then gets a suggestion. It could be an existing story or movie title, a made up title, a genre, or any basic suggestion.</li>
+			<li>The two improviers then perform that scene, trying to create the entire story in one minute. The host will time them and call scene at one minute.</li>
+			<li>Then the host will point out that it's still too long and set them up to do the same scene in half the time.</li>
+			<li>This pattern continues doing the same scene in half the time going from 60 to 30 to 15 to 7 to 3 to 1 second(s).</li>
+			<li>Each time the scene is replayed it's distilled and/or sped up further until the final one second scene.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Try to move around the stage and use object work to help you remember the flow of what happens in the original scene.</li>
+			<li>It probably won't be an extremely compelling narrative but try to have a beginning, middle, and end.</li>
+			<li>Play up dramatic and film tropes.</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="torture.html">Torture</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -327,7 +357,7 @@
 			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="scene.html">Scenework</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="justification.html">Justification</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -382,7 +412,7 @@
 			<li>You playing in pairs or a larger group.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -420,7 +450,7 @@
 			<li>Instruct the audience memebers to just blurt out a random word, don't try to make it fit in the context of the scene.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="audience_participation.html">Audience Participation</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -481,7 +511,7 @@
 			<li>These are just couple variations we play, there are infinite possibilities so make up and experiment with your own.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="sentences.html">Sentences</a> - 
+		<a class="tag-link" href="justification.html">Justification</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="sentences.html">Sentences</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -521,7 +551,7 @@
 			<li>Focus on telling a good story rather than doing bits. Bits can have their place though.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="long_forms.html">Long Form</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
