--- a/pages/long_forms.html
+++ b/pages/long_forms.html
@@ -52,7 +52,7 @@
 			<li>Try to add variety to your scenes by varying them in length, number of performers per scene and energy level.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="long_forms.html">Long Form</a> - <a href="performance.html">Performace</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="long_forms.html">Long Form</a> - <a class="tag-link" href="performance.html">Performace</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -92,7 +92,7 @@
 			<li>Focus on telling a good story rather than doing bits. Bits can have their place though.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="long_forms.html">Long Form</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
