--- a/pages/musical.html
+++ b/pages/musical.html
@@ -76,7 +76,7 @@
 			<li>Synonyms are usually the way to ge, but a curveball can be fun too.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="musical.html">Musical</a> - <a href="party.html">Party</a> - <a href="warm_ups.html">Warm Up</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="musical.html">Musical</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -89,7 +89,7 @@
 		<hr>
 		<h3>Description</h3>
 		<ul>
-			<li>A simple tagline is descovered through a scene or suggestion.</li>
+			<li>A simple tagline is discovered through a scene or suggestion.</li>
 			<li>Then the music will come in and the improvisers will sing a song with four parts.</li>
 			<li>In a front facing tagline song each verse starts with the Tagline.</li>
 			<li>In a back facing tagline song each verse ends with the tagline, so you know before you start what rhyme you need to set up.</li>
@@ -113,7 +113,7 @@
 			<li><a href="https://www.openyourmouthandsing.co.uk/tagline-song.html">openyourmouthandsing.co.uk</a></li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="musical.html">Musical</a> - <a href="song_formats.html">Song Format</a> - 
+		<a class="tag-link" href="musical.html">Musical</a> - <a class="tag-link" href="song_formats.html">Song Format</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
