--- a/pages/performance.html
+++ b/pages/performance.html
@@ -43,6 +43,9 @@
 				<a href="#gossip">Gossip</a>
 			</li>
 			<li>
+				<a href="#halfLife">Half Life</a>
+			</li>
+			<li>
 				<a href="#pillars">Pillars</a>
 			</li>
 			<li>
@@ -83,7 +86,7 @@
 			<li>The bartender says, you're too unappealing.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
+		<a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="pun.html">Pun</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -127,7 +130,7 @@
 			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 302</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="group.html">Group Game</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -166,7 +169,7 @@
 			<li>You could play it as an elimination game where people get out if they mess up or take too long to respond.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -203,7 +206,7 @@
 			<li>Sources text</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="gibberish.html">Gibberish</a> - <a href="guessing.html">Guessing</a> - <a href="object_work.html">Object Work</a> - <a href="performance.html">Performance</a> - 
+		<a class="tag-link" href="gibberish.html">Gibberish</a> - <a class="tag-link" href="guessing.html">Guessing</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="performance.html">Performance</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -235,7 +238,7 @@
 			<li>As the host, utilize the rule of three most of the time, only occasionally making the improvisers change only one line of dialogue or making them change many lines in a long run of changes.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="torture.html">Torture</a> - 
+		<a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="torture.html">Torture</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -256,7 +259,7 @@
 		</ul><hr>
 		<h3>Purpose</h3>
 		<ul>
-			<li>Improvisers are able to make up a character and explore their perspective without worrying about other elements of scenework.</li>
+			<li>Improvisers are able to make up a character and explore their perspective without worrying about other elements of scene work.</li>
 			<li>Improviers will have to listen to their scene partners and make decisions that are distinct from them.</li>
 		</ul><hr>
 		<h3>Tips</h3>
@@ -268,7 +271,7 @@
 			<li>Let a different character answer first in each round of questions.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="exercises.html">Exercise</a> - <a href="performance.html">Performance</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="performance.html">Performance</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -304,7 +307,7 @@
 			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercises</a> - <a href="interview.html">Interview</a> - <a href="listening.html">Listening</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercises</a> - <a class="tag-link" href="interview.html">Interview</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -350,7 +353,34 @@
 			<li>It's also okay to address multiple improvisers at once or to call someone in the group out(within the game).</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="pun.html">Pun</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- HALF LIFE ---------- -->
+	<div class="game-box p-2" id="halfLife">
+		<h2>Half Life</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>The host sets up the game. Two improvisers will perform an entire story in just one minute. They can riff a little about how movies today are too long, people don't have long attention spans or whatever.</li>
+			<li>The host then gets a suggestion. It could be an existing story or movie title, a made up title, a genre, or any basic suggestion.</li>
+			<li>The two improviers then perform that scene, trying to create the entire story in one minute. The host will time them and call scene at one minute.</li>
+			<li>Then the host will point out that it's still too long and set them up to do the same scene in half the time.</li>
+			<li>This pattern continues doing the same scene in half the time going from 60 to 30 to 15 to 7 to 3 to 1 second(s).</li>
+			<li>Each time the scene is replayed it's distilled and/or sped up further until the final one second scene.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Try to move around the stage and use object work to help you remember the flow of what happens in the original scene.</li>
+			<li>It probably won't be an extremely compelling narrative but try to have a beginning, middle, and end.</li>
+			<li>Play up dramatic and film tropes.</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="torture.html">Torture</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -388,7 +418,7 @@
 			<li>Instruct the audience memebers to just blurt out a random word, don't try to make it fit in the context of the scene.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="audience_participation.html">Audience Participation</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -449,7 +479,7 @@
 			<li>These are just couple variations we play, there are infinite possibilities so make up and experiment with your own.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="sentences.html">Sentences</a> - 
+		<a class="tag-link" href="justification.html">Justification</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="sentences.html">Sentences</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -490,7 +520,7 @@
 			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="child_friendly.html">Child Friendly</a> - <a href="guessing.html">Guessing</a> - <a href="performance.html">Performance</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="guessing.html">Guessing</a> - <a class="tag-link" href="performance.html">Performance</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -530,7 +560,7 @@
 			<li>Focus on telling a good story rather than doing bits. Bits can have their place though.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="long_forms.html">Long Form</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
