--- a/pages/pun.html
+++ b/pages/pun.html
@@ -53,7 +53,7 @@
 			<li>The bartender says, you're too unappealing.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
+		<a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="pun.html">Pun</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -99,7 +99,7 @@
 			<li>It's also okay to address multiple improvisers at once or to call someone in the group out(within the game).</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="character.html">Character</a> - <a href="performance.html">Performance</a> - <a href="pun.html">Pun</a> - 
+		<a class="tag-link" href="character.html">Character</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="pun.html">Pun</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
