--- a/pages/scene.html
+++ b/pages/scene.html
@@ -34,6 +34,12 @@
 				<a href="#dayInTheLife">Day in the Life</a>
 			</li>
 			<li>
+				<a href="#halfLife">Half Life</a>
+			</li>
+			<li>
+				<a href="#justificationRealtor">Justification Realtor</a>
+			</li>
+			<li>
 				<a href="#pillars">Pillars</a>
 			</li>
 			<li>
@@ -73,7 +79,7 @@
 			<li>How to be the Greatest Improviser on Earth by Will Hines - p. 22</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -117,7 +123,7 @@
 			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 302</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="group.html">Group Game</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="group.html">Group Game</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -156,7 +162,7 @@
 			<li>You could play it as an elimination game where people get out if they mess up or take too long to respond.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -188,7 +194,7 @@
 			<li>As the host, utilize the rule of three most of the time, only occasionally making the improvisers change only one line of dialogue or making them change many lines in a long run of changes.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="child_friendly.html">Child Friendly</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="torture.html">Torture</a> - 
+		<a class="tag-link" href="child_friendly.html">Child Friendly</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="torture.html">Torture</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -224,7 +230,69 @@
 			</ul>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercises</a> - <a href="interview.html">Interview</a> - <a href="listening.html">Listening</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercises</a> - <a class="tag-link" href="interview.html">Interview</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- HALF LIFE ---------- -->
+	<div class="game-box p-2" id="halfLife">
+		<h2>Half Life</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>The host sets up the game. Two improvisers will perform an entire story in just one minute. They can riff a little about how movies today are too long, people don't have long attention spans or whatever.</li>
+			<li>The host then gets a suggestion. It could be an existing story or movie title, a made up title, a genre, or any basic suggestion.</li>
+			<li>The two improviers then perform that scene, trying to create the entire story in one minute. The host will time them and call scene at one minute.</li>
+			<li>Then the host will point out that it's still too long and set them up to do the same scene in half the time.</li>
+			<li>This pattern continues doing the same scene in half the time going from 60 to 30 to 15 to 7 to 3 to 1 second(s).</li>
+			<li>Each time the scene is replayed it's distilled and/or sped up further until the final one second scene.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Try to move around the stage and use object work to help you remember the flow of what happens in the original scene.</li>
+			<li>It probably won't be an extremely compelling narrative but try to have a beginning, middle, and end.</li>
+			<li>Play up dramatic and film tropes.</li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="torture.html">Torture</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- JUSTIFICATION REALTOR ---------- -->
+	<div class="game-box p-2" id="justificationRealtor">
+		<h2>Justification Realtor</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>One player starts a scene as a realtor preparing an open house.</li>
+			<li>Shortly after a few guests(usually 2-3) knock on the door and are welcomed to view the house.</li>
+			<li>The realtor shows the guests around and one by one the guests ask questions about the absurdities of the house.</li>
+			<li>These questions involve a bit of scene painting of absurd things we don't already know about the house.</li>
+			<li>It is the realtors job to logically justify these absurd features of the house.</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Guest: Excuse me, could you tell me a bit about this rusty blood stained trap door here in the floor?</li>
+			<li>Realtor: Ah certainly! One of this home's primary security features. There is a ferocious blood thirsty beast underneath that door. If ever you're in danger from a home intruder, you need only pull that lever.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>This exercise allows improvisers to practice:</li>
+			<ul>
+				<li>playing a grounded character</li>
+				<li>scene painting</li>
+				<li>coming up with inconsequential absurd ideas</li>
+				<li>justifying</li>
+			</ul>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="justification.html">Justification</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -262,7 +330,7 @@
 			<li>Instruct the audience memebers to just blurt out a random word, don't try to make it fit in the context of the scene.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="audience_participation.html">Audience Participation</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="audience_participation.html">Audience Participation</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -323,7 +391,7 @@
 			<li>These are just couple variations we play, there are infinite possibilities so make up and experiment with your own.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="justification.html">Justification</a> - <a href="listening.html">Listening</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - <a href="sentences.html">Sentences</a> - 
+		<a class="tag-link" href="justification.html">Justification</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - <a class="tag-link" href="sentences.html">Sentences</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -352,7 +420,7 @@
 			<li>The Upright Citizens Brigade Comedy Improv Manual (second edition) by Matt Besser, Ian Roberts, and Matt Walsh - p. 36</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="object_work.html">Object Work</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="object_work.html">Object Work</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
@@ -392,7 +460,7 @@
 			<li>Focus on telling a good story rather than doing bits. Bits can have their place though.</li>
 		</ul><hr>
 		<h4>Tags</h4>
-		<a href="exercises.html">Exercise</a> - <a href="listening.html">Listening</a> - <a href="long_forms.html">Long Form</a> - <a href="narrative.html">Narrative</a> - <a href="performance.html">Performance</a> - <a href="scene.html">Scene Work</a> - 
+		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="long_forms.html">Long Form</a> - <a class="tag-link" href="narrative.html">Narrative</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
