Added ping pong ballad

--- a/pages/performance.html
+++ b/pages/performance.html
@@ -49,6 +49,9 @@
 				<a href="#pillars">Pillars</a>
 			</li>
 			<li>
+				<a href="#pingPongBallad">Ping Pong Ballad</a>
+			</li>
+			<li>
 				<a href="#sentenceGame">Sentence Game</a>
 			</li>
 			<li>
@@ -419,6 +422,37 @@
 		</ul><hr>
 		<h4>Tags</h4>
 		<a class="tag-link" href="audience_participation.html">Audience Participation</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="scene.html">Scene Work</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- PING PONG BALLAD ---------- -->
+	<div class="game-box p-2" id="pingPongBallad">
+		<h2>Ping Pong Ballad</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>This is a game for two improvisers.</li>
+			<li>A volunteer from the audience is invited to sit center stage.</li>
+			<li>The two improvisers conduct a brief interview of the audience member. Get their name, family, pets, occupation, hobbies, etc...</li>
+			<li>Instruct the audience member that whoever they are looking at during the song has to be singing, they can switch back and forth between who they are looking at as much as they want, and to use and abuse this power.</li>
+			<li>The music comes in and who ever is being looked at must serenade the audience member.</li>
+			<li>The improviers will need to listen intently while the other is singing so they can continue any lines are are interupted with a switch.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>If you get switched to mid word or phrase, do your best to finish that word or phrase.</li>
+			<li>Use the persons name often. It's a good reset or start of a line or verse.</li>
+			<li>Better yet if you can set up rhymes with their name.</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li><a href="https://improvencyclopedia.org/games/Ping_Pong_Ballad.html">Improv Encyclopedia</a></li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a class="tag-link" href="audience_participation.html">Audience Participation</a> - <a class="tag-link" href="interview.html">Interview</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="musical.html.performance.html">Musical</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
