--- a/pages/all_games.html
+++ b/pages/all_games.html
@@ -108,6 +108,7 @@
     <div>
       <ul>
 <li><h5><a href="audience_participation.html#pillars">Pillars</a></h5></li>
+<li><h5><a href="musical.html#pingPongBallad">Ping Pong Ballad</a></h5></li>
       </ul>
     </div>
     <h3 id="q">Q</h3>
