--- a/pages/all_games.html
+++ b/pages/all_games.html
@@ -17,13 +17,18 @@
 <body>
   <h1 class="text-center" id="top">All Games & Exercises</h1>
   <div class="mt-5 text-center">
-    <a href="#a">A</a> <a href="#b">B</a> <a href="#c">C</a> <a href="#d">D</a> <a href="#e">E</a> <a href="#f">F</a> 
-    <a href="#g">G</a> <a href="#h">H</a> <a href="#i">I</a> <a href="#j">J</a> <a href="#k">K</a> <a href="#l">L</a> 
-    <a href="#m">M</a> <a href="#n">N</a> <a href="#o">O</a> <a href="#p">P</a> <a href="#q">Q</a> <a href="#r">R</a> 
-    <a href="#s">S</a> <a href="#t">T</a> <a href="#u">U</a> <a href="#v">V</a> <a href="#w">W</a> <a href="#x">X</a> 
-    <a href="#y">Y</a> <a href="#z">Z</a>
+    <a href="#numbers">#</a> 
+<a href="#a">A</a> <a href="#b">B</a> <a href="#c">C</a> <a href="#d">D</a> <a href="#e">E</a> <a href="#f">F</a> <a href="#g">G</a> <a href="#h">H</a> <a href="#i">I</a> <a href="#j">J</a> <a href="#k">K</a> <a href="#l">L</a> <a href="#m">M</a> <a href="#n">N</a> <a href="#o">O</a> <a href="#p">P</a> <a href="#q">Q</a> <a href="#r">R</a> <a href="#s">S</a> <a href="#t">T</a> <a href="#u">U</a> <a href="#v">V</a> <a href="#w">W</a> <a href="#x">X</a> <a href="#y">Y</a> <a href="#z">Z</a>
   </div>
   <div class="m-5">
+
+    <h3 id="numbers">Numbers</h3>
+    <div>
+      <ul>
+<li><h5><a href="pun.html#185">185</a></h5></li>
+<li><h5><a href="exercises.html#60SecondsOfSilence">60 Seconds of Silence</a></h5></li>
+      </ul>
+    </div>
     <h3 id="a">A</h3>
     <div>
       <ul>
@@ -36,6 +41,8 @@
     <div>
       <ul>
 <li><h5><a href="warm_ups.html#badRap">Bad Rap</a></h5></li>
+<li><h5><a href="musical.html#beastieBoys">Beastie Boys</a></h5></li>
+<li><h5><a href="musical.html#beastieBoys">Beastie Rap</a></h5></li>
 <li><h5><a href="warm_ups.html#bigBooty">Big Booty</a></h5></li>
 <li><h5><a href="warm_ups.html#bunnyBunny">Bunny Bunny</a></h5></li>
       </ul>
