--- a/pages/exercises.html
+++ b/pages/exercises.html
@@ -34,6 +34,12 @@
 				<a href="#badRap">Bad Rap</a>
 			</li>
 			<li>
+				<a href="#beastieBoys">Beastie Boys</a>
+			</li>
+			<li>
+				<a href="#beastieRap">Beastie Rap</a>
+			</li>
+			<li>
 				<a href="#bigBooty">Big Booty</a>
 			</li>
 			<li>
@@ -253,6 +259,115 @@
 		</ul><hr>
 		<h4>Tags</h4>
 		<a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="musical.html">Musical</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BEASTIE BOYS ---------- -->
+	<div class="game-box p-2" id="beastieBoys">
+		<h2>Beastie Boys</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>Two teams of 3-4 players will face off in a pseudo rap battle.</li>
+			<li>Each team has a leader who sets up rhymes and supporters who try to complete the rhyme in time with a beat.</li>
+			<li>Instruct the audience to make a buzzer sound if the team fails to complete the rhyme in a way that makes sense or is too off beat.</li>
+			<li>To start each round, the host will get a one word suggestion.</li>
+			<li>The two leaders will go back and fourth trying to set up their team to complete their rhyme with the suggested word.</li>
+			<li>If the support players fail to complete the rhyme appropriately the leader is eliminated and rotates to the back to become a supporter and a new leader steps forward, which starts a new round.</li>
+			<li>The team who won the previous round will go first in the next round.</li>
+			<li>A team loses when all their members have been eliminated as the leader.</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Suggestion: Day</li>
+			<li>Team 1 Leader: Little kids at recess, they love to...</li>
+			<li>Team 1 Support: PLAY!</li>
+			<li>Team 2 Leader: I sure don't curse, those aren't words that I...</li>
+			<li>Team 2 Support: SAY!</li>
+			<li>Team 1 Leader: I don't know where I am, I don't know which...</li>
+			<li>Team 1 Support: ... uhhh... Oh! WAY!(way too late off beat)</li>
+			<li>Audience: *buzzer sound*</li>
+			<li>Team 1 rotates and a new round beings.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>This game is great for practicing rhyming, getting in a rhyming mindset, and setting up others to finish rhymes.</li>
+			<li>It's a great warm-up or show opener.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Really bring that energy and spirit of competion to this game. Feel free to dis the other team or act like their rhymes are whack.</li>
+			<li>The host should ask the audience for one or two syllable words unless the performers are very skilled at rhyming.</li>
+			<li>If it is helpful a leader can do an act out as part or their set up.</li>
+			<li>The beat can be played by a percussion, a looping backing track, or by having the performers snap, clap, or pat. But a track or percussionist is preferred for a live performance.</li>
+		</ul><hr>
+		<h3>Sources</h3>
+		<ul>
+			<li><a href="https://www.openyourmouthandsing.co.uk/beastie-boys.html">openyourmouthandsing.co.uk</a></li>
+		</ul><hr>
+		<h3>See Also</h3>
+		<ul>
+			<li><a href="musical.html#beastieRap">Beastie Rap</a></li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="musical.html">Musical</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="performance.html">Performance</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
+		<hr>
+		<h5><a class="back-top" href="#top">Back to Top</a></h5>
+	</div>
+
+	<hr class="thick-hr">
+
+	<!-- ---------- BEASTIE RAP ---------- -->
+	<div class="game-box p-2" id="beastieRap">
+		<h2>Beastie Rap</h2>
+		<hr>
+		<h3>Description</h3>
+		<ul>
+			<li>Improvisers circle up and snap, clap, or pat a beat.</li>
+			<li>The game starts with a chant in rhythm: Dada da da dada da!</li>
+			<li>Repeat the chant 2-4 times at the start of the game.</li>
+			<li>The first improviser will rap a line ending with an easily rhymable word.</li>
+			<li>Repeat the chant once after each line.</li>
+			<li>Going around the circle, the next 3 improvisers will rap a line that ends by rhyming with the first improviser.</li>
+			<li>Other members in the circle will listen closely and try to predict and say the rhyming word at the same time.</li>
+			<li>After the initial line and the three rhyming lines, the chant is repeated 2-4 and the next person in the circle raps a new line with a new easily rhymable word and the pattern repeats.</li>
+		</ul><hr>
+		<h3>Example</h3>
+		<ul>
+			<li>Ensemble: Dada da da dada da!</li>
+			<li>Ensemble: Dada da da dada da!</li>
+			<li>Player 1: I just put on my brand new SHOES!</li>
+			<li>Ensemble: Dada da da dada da!</li>
+			<li>Player 2: Sherlock holmes always looking for-</li>
+			<li>Ensemble: CLUES!</li>
+			<li>Ensemble: Dada da da dada da!</li>
+			<li>Player 3: Wanna be a member? Better pay your-</li>
+			<li>Ensemble: DUES!</li>
+			<li>Ensemble: Dada da da dada da!</li>
+			<li>Player 4: My main man Scott on the ones and-</li>
+			<li>Ensemble: TWOS!</li>
+			<li>Ensemble: Dada da da dada da!</li>
+			<li>Ensemble: Dada da da dada da!</li>
+			<li>Then a new round starts with the next member in the circle.</li>
+		</ul><hr>
+		<h3>Purpose</h3>
+		<ul>
+			<li>This is a great group warm up and useful for practicing rhyming and bringing high energy.</li>
+		</ul><hr>
+		<h3>Tips</h3>
+		<ul>
+			<li>Really bring that Beastie Boys vibe and energy.</li>
+			<li>As soon as you hear the rhyme word quickly think of as many rhyming words as you can to have ready to go.</li>
+		</ul><hr>
+		<h3>See Also</h3>
+		<ul>
+			<li><a href="musical.html#beastieBoys">Beastie Boys</a></li>
+		</ul><hr>
+		<h4>Tags</h4>
+		<a class="tag-link" href="energy.html">Energy</a> - <a class="tag-link" href="exercises.html">Exercise</a> - <a class="tag-link" href="listening.html">Listening</a> - <a class="tag-link" href="musical.html">Musical</a> - <a class="tag-link" href="party.html">Party</a> - <a class="tag-link" href="warm_ups.html">Warm Up</a> - 
 		<hr>
 		<h5><a class="back-top" href="#top">Back to Top</a></h5>
 	</div>
